--- a/eam/view/view-eam/src/main/resources/public/business/eam/goods_stock/goods_stock_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/goods_stock/goods_stock_list.html
@@ -2,7 +2,7 @@
 /**
  * 库存物品 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-22 06:25:06
+ * @since 2022-04-24 20:39:37
  */
  -->
  <!DOCTYPE html>
@@ -66,11 +66,12 @@
                     <!-- 仓库 , warehouseId ,typeName=text_input, isHideInSearch=true -->
                     <!-- 来源 , sourceId ,typeName=select_box, isHideInSearch=true -->
                     <!-- 物品 , goodsId ,typeName=select_box, isHideInSearch=true -->
-                    <!-- 入库存数量 , stockInNumber ,typeName=number_input, isHideInSearch=true -->
-                    <!-- 当前库存数量 , stockCurNumber ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 入库数量 , stockInNumber ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 当前数量 , stockCurNumber ,typeName=number_input, isHideInSearch=true -->
                     <!-- 总金额 , amount ,typeName=number_input, isHideInSearch=true -->
                     <!-- 管理人 , managerId ,typeName=button, isHideInSearch=true -->
                     <!-- 入库时间 , storageDate ,typeName=date_input, isHideInSearch=true -->
+                    <!-- 库存数据 , realStockId ,typeName=text_input, isHideInSearch=true -->
                     <!-- 制单人 , originatorId ,typeName=button, isHideInSearch=true -->
                     <!-- 选择 , selectedCode ,typeName=text_input, isHideInSearch=true -->
                     <!-- 物品型号 , goodsModel ,typeName=select_box, isHideInSearch=true -->
