--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_stock_goods_adjust/asset_stock_goods_adjust_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_stock_goods_adjust/asset_stock_goods_adjust_form.html
@@ -2,7 +2,7 @@
 /**
  * 库存调整 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-23 07:43:57
+ * @since 2022-04-24 15:08:01
  */
  -->
  <!DOCTYPE html>
@@ -38,7 +38,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-9324-content">
+        <div class="layui-row form-row" id="random-4560-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -88,7 +88,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-3098-content">
+        <div class="layui-row form-row" id="random-8979-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -121,10 +121,10 @@
         </div>
          <!--开始：group 循环-->
 
-        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-7303-fieldset">
+        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-4054-fieldset">
         <legend>物品列表</legend>
         </fieldset>
-        <div class="layui-row form-row" style="text-align: center;" id="random-7303-content">
+        <div class="layui-row form-row" style="text-align: center;" id="random-4054-content">
             <div style="display: inline-block;padding-right: 8px;padding-left: 8px" class="layui-col-xs12">
             <iframe js-fn="goodsSelectList" class="form-iframe" frameborder="0" style="width: 100%"></iframe>
             </div>
@@ -151,9 +151,12 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
+    var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetHandleStatusEnum')}]];
     var VALIDATE_CONFIG={"businessDate":{"date":true,"labelInForm":"业务日期","inputType":"date_input"},"warehouseId":{"labelInForm":"仓库","inputType":"select_box","required":true},"name":{"labelInForm":"业务名称","inputType":"text_input","required":true}};
     var AUTH_PREFIX="eam_asset_stock_goods_adjust";
 
+    // OPER_TYPE
+    var OPER_TYPE = [[${operType}]] ;
     // OWNER_TYPE
     var OWNER_TYPE = [[${ownerType}]] ;
 
