--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_stock_goods_in/asset_stock_goods_in_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_stock_goods_in/asset_stock_goods_in_form.html
@@ -2,7 +2,7 @@
 /**
  * 库存物品单 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-23 07:42:40
+ * @since 2022-04-24 15:04:47
  */
  -->
  <!DOCTYPE html>
@@ -37,11 +37,11 @@
          <!--开始：group 循环-->
 
 
-        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-8171-fieldset">
+        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-3790-fieldset">
             <legend>基本信息</legend>
         </fieldset>
 
-        <div class="layui-row form-row" id="random-8171-content">
+        <div class="layui-row form-row" id="random-3790-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -155,7 +155,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-8574-content">
+        <div class="layui-row form-row" id="random-0067-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -188,10 +188,10 @@
         </div>
          <!--开始：group 循环-->
 
-        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-8195-fieldset">
+        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-9595-fieldset">
         <legend>物品列表</legend>
         </fieldset>
-        <div class="layui-row form-row" style="text-align: center;" id="random-8195-content">
+        <div class="layui-row form-row" style="text-align: center;" id="random-9595-content">
             <div style="display: inline-block;padding-right: 8px;padding-left: 8px" class="layui-col-xs12">
             <iframe js-fn="goodsSelectList" class="form-iframe" frameborder="0" style="width: 100%"></iframe>
             </div>
@@ -224,6 +224,8 @@
 
     // OWNER_TYPE
     var OWNER_TYPE = [[${ownerType}]] ;
+    // OPER_TYPE
+    var OPER_TYPE = [[${operType}]] ;
 
 </script>
 
