--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_stock_goods_out/asset_stock_goods_out_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_stock_goods_out/asset_stock_goods_out_form.html
@@ -2,7 +2,7 @@
 /**
  * 库存出库 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-23 08:02:59
+ * @since 2022-04-24 15:04:55
  */
  -->
  <!DOCTYPE html>
@@ -38,7 +38,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-8821-content">
+        <div class="layui-row form-row" id="random-9015-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -136,7 +136,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-9242-content">
+        <div class="layui-row form-row" id="random-8977-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -169,10 +169,10 @@
         </div>
          <!--开始：group 循环-->
 
-        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-4121-fieldset">
+        <fieldset class="layui-elem-field layui-field-title form-group-title" id="random-4301-fieldset">
         <legend>物品列表</legend>
         </fieldset>
-        <div class="layui-row form-row" style="text-align: center;" id="random-4121-content">
+        <div class="layui-row form-row" style="text-align: center;" id="random-4301-content">
             <div style="display: inline-block;padding-right: 8px;padding-left: 8px" class="layui-col-xs12">
             <iframe js-fn="goodsSelectList" class="form-iframe" frameborder="0" style="width: 100%"></iframe>
             </div>
@@ -203,6 +203,8 @@
     var VALIDATE_CONFIG={"businessDate":{"date":true,"labelInForm":"业务日期","inputType":"date_input"},"stockType":{"labelInForm":"单据类型","inputType":"select_box","required":true},"warehouseId":{"labelInForm":"仓库","inputType":"select_box","required":true},"name":{"labelInForm":"单据名称","inputType":"text_input","required":true},"useOrganizationId":{"labelInForm":"领用部门","inputType":"button","required":true},"collectionDate":{"date":true,"labelInForm":"出库日期","inputType":"date_input"},"useOwnCompanyId":{"labelInForm":"领用公司","inputType":"button","required":true}};
     var AUTH_PREFIX="eam_asset_stock_goods_out";
 
+    // OPER_TYPE
+    var OPER_TYPE = [[${operType}]] ;
     // OWNER_TYPE
     var OWNER_TYPE = [[${ownerType}]] ;
 
