--- a/eam/view/view-eam/src/main/resources/public/business/eam/goods_stock/goods_stock_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/goods_stock/goods_stock_form.html
@@ -2,7 +2,7 @@
 /**
  * 库存物品 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-22 06:25:07
+ * @since 2022-04-24 20:39:38
  */
  -->
  <!DOCTYPE html>
@@ -38,7 +38,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-2599-content">
+        <div class="layui-row form-row" id="random-4239-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -121,7 +121,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-4113-content">
+        <div class="layui-row form-row" id="random-1372-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -197,7 +197,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-3854-content">
+        <div class="layui-row form-row" id="random-9435-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -259,6 +259,8 @@
     var OWNER_CODE = [[${ownerCode}]] ;
     // OWNER_TYPE
     var OWNER_TYPE = [[${ownerType}]] ;
+    // ASSET_CATEGORY_DATA
+    var ASSET_CATEGORY_DATA = [[${assetCategoryData}]] ;
 
 </script>
 
