--- a/eam/view/view-eam/src/main/resources/public/business/eam/goods_stock/goods_stock_select_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/goods_stock/goods_stock_select_list.html
@@ -143,6 +143,7 @@
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
     var LAYUI_TABLE_WIDTH_CONFIG2 = [[${layuiTableWidthConfig}]] ;
     var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusEnableEnum')}]];
+    var SELECT_GOODSSTATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusEnableEnum')}]];
     var AUTH_PREFIX="eam_goods_stock";
     var TABLE_ID = [[${tableId}]] ;
     var OWNER_CODE = [[${ownerCode}]] ;
