--- a/eam/view/view-eam/src/main/resources/public/business/eam/goods_stock_goods/goods_stock_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/goods_stock_goods/goods_stock_form.html
@@ -257,6 +257,8 @@
 
     var ASSET_CATEGORY_DATA =  [[${assetCategoryData}]];
 
+    var CATEGORY_CODE = [[${categoryCode}]] ;
+    
     // OWNER_CODE
     var OWNER_CODE = [[${ownerCode}]] ;
 
