--- a/eam/view/view-eam/src/main/resources/public/business/eam/goods_stock_goods/goods_stock_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/goods_stock_goods/goods_stock_list.html
@@ -169,6 +169,10 @@
     // OWNER_TYPE
     var OWNER_TYPE = [[${ownerType}]] ;
 
+    var CATEGORY_CODE = [[${categoryCode}]] ;
+
+
+
 </script>
 
 <script th:src="'/business/eam/goods_stock_goods/goods_stock_ext.js?'+${cacheKey}"></script>
